Fix paths, it works now

--- a/app/core/templates/layouts/basic.html.twig
+++ b/app/core/templates/layouts/basic.html.twig
@@ -26,6 +26,7 @@
             <!-- Favicon -->
             <link rel="icon" type="image/x-icon" href="{{ assets.url('assets://images/favicon.ico') }}" />
             
+            <!-- Include main CSS asset bundle -->
             {{ assets.css() | raw }}            
         
             <!-- Author link -->
