doing some cleanup

--- a/app/core/templates/pages/error/404.html.twig
+++ b/app/core/templates/pages/error/404.html.twig
@@ -16,6 +16,6 @@
         <h1>We tried to find your page...</h1>
         <img src="{{ assets.url('assets://images/404.png') }}">
         <br><br>
-        <p class="lead">Maybe next season.  Click <a href="{{site.uri.public}}">here</a> to return to the front page.</p>
+        <p class="lead">Either way, click <a href="{{site.uri.public}}">here</a> to return to the front page.</p>
     </div> <!-- /container -->
 {% endblock %}
