--- a/app/core/templates/pages/index.html.twig
+++ b/app/core/templates/pages/index.html.twig
@@ -148,7 +148,6 @@
                 </li>
                 <li>jQuery v1.11.0</li>
                 <li>Font Awesome v4.1.0</li>
-                <li>Working PHP contact form with validation</li>
                 <li>Unstyled page elements for easy customization</li>
                 <li>17 HTML pages</li>
             </ul>
@@ -179,7 +178,7 @@
     <!-- Script to Activate the Carousel -->
     <script>
     $('.carousel').carousel({
-        interval: 5000 //changes the speed
+        interval: false // set to false to prevent auto-advance
     })
     </script>
 {% endblock %}
