Fix some minor error screen layout issues

--- a/userfrosting/templates/themes/default/errors/compromised.twig
+++ b/userfrosting/templates/themes/default/errors/compromised.twig
@@ -13,8 +13,8 @@
 {% block content %}
     <div class="container text-center">
         <h1>Your account may have been compromised!</h1>
-        <img src="{{site.uri.image}}/compromised.jpg">
+        <img class="img-fluid m-b-1 m-x-auto" src="{{site.uri.image}}/compromised.jpg">
         <br><br>
-        <p class="lead">Someone may have used your login information to acccess this page.  For your safety, all sessions were logged out. Please <a href="{{site.uri.public}}/account/login">log in</a> and check your account for suspicious activity.  You may also wish to change your password.</p>
+        <p class="lead">Someone may have used your login information to access this page.  For your safety, all sessions were logged out. Please <a href="{{site.uri.public}}/account/login">log in</a> and check your account for suspicious activity.  You may also wish to change your password.</p>
     </div> <!-- /container -->
 {% endblock %}
