--- a/userfrosting/templates/themes/default/errors/404.twig
+++ b/userfrosting/templates/themes/default/errors/404.twig
@@ -13,7 +13,7 @@
 {% block content %}
     <div class="container text-center">
         <h1>Error 404</h1>
-        <img src="{{site.uri.image}}/fry.png">
+        <img class="img-fluid m-b-1 m-x-auto" src="{{site.uri.image}}/fry.png">
         <br><br>
         <p class="lead">Either way, click <a href="{{site.uri.public}}">here</a> to return to the front page.</p>
     </div> <!-- /container -->
