--- a/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
+++ b/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
@@ -1,18 +1,9 @@
-{% extends "layouts/basic.html.twig" %}
+{% extends "layouts/azmind.html.twig" %}
 
 {# Overrides blocks in head of base template #}
 {% block page_title %}Sign in or Register{% endblock %}
 
 {% block page_description %}Sign in to your UserFrosting account, or register for a new account.{% endblock %}
-
-{# This is an example of when we might want to override the site-level stylesheets for a particular page or page group. #}
-{% block stylesheets_site %}
-    <!-- Google Font - use remote for now -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
-    
-    <!-- Include main CSS asset bundle -->
-    {{ assets.css() | raw }}
-{% endblock %}
     
 {% block stylesheets_page %}
     <!-- Page-specific CSS asset bundle -->
@@ -40,30 +31,37 @@
                 <div class="col-sm-10 col-sm-offset-1 show-forms">
                     <span class="show-register-form active">Register</span> 
                     <span class="show-forms-divider">/</span> 
-                    <span class="show-login-form">Login</span>
+                    <span class="show-login-form">Sign In</span>
                 </div>
             </div>
             
             <div class="row register-form">
                 <div class="col-sm-4 col-sm-offset-1">
-                    <form role="form" action="" method="post" class="r-form">
+                    <form id="register" role="form" action="" method="post" class="r-form">
                         <div class="form-group">
-                            <label class="sr-only" for="r-form-first-name">First name</label>
-                            <input type="text" name="r-form-first-name" placeholder="First name..." class="r-form-first-name form-control" id="r-form-first-name">
+                            <label class="sr-only" for="user_name">User name</label>
+                            <input type="text" name="user_name" placeholder="A unique name to identify yourself." class="form-control">
                         </div>
                         <div class="form-group">
-                            <label class="sr-only" for="r-form-last-name">Last name</label>
-                            <input type="text" name="r-form-last-name" placeholder="Last name..." class="r-form-last-name form-control" id="r-form-last-name">
+                            <label class="sr-only" for="first_name">First name</label>
+                            <input type="text" name="first_name" placeholder="First name" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label class="sr-only" for="r-form-email">Email</label>
-                            <input type="text" name="r-form-email" placeholder="Email..." class="r-form-email form-control" id="r-form-email">
+                            <label class="sr-only" for="last_name">Last name</label>
+                            <input type="text" name="last_name" placeholder="Last name" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label class="sr-only" for="r-form-about-yourself">About yourself</label>
-                            <textarea name="r-form-about-yourself" placeholder="About yourself..." 
-                                        class="r-form-about-yourself form-control" id="r-form-about-yourself"></textarea>
+                            <label class="sr-only" for="email">Email</label>
+                            <input type="text" name="email" placeholder="Email address" class="form-control">
                         </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="password">Password</label>
+                            <input type="text" name="password" placeholder="12-100 characters" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="passwordc">Confirm password</label>
+                            <input type="text" name="passwordc" placeholder="Re-enter your password" class="form-control">
+                        </div>                        
                         <button type="submit" class="btn">Sign me up!</button>
                     </form>
                 </div>
@@ -94,7 +92,7 @@
             
             <div class="row login-form">
                 <div class="col-sm-4 col-sm-offset-1">
-                    <form role="form" action="" method="post" class="l-form">
+                    <form id="sign-in" role="form" action="" method="post" class="l-form">
                         <div class="form-group">
                             <label class="sr-only" for="l-form-username">Username</label>
                             <input type="text" name="l-form-username" placeholder="Username..." class="l-form-username form-control" id="l-form-username">
@@ -140,27 +138,6 @@
             </div> 
         </div>
     </div>
-{% endblock %}
-
-{% block scripts_page_group %}
-    <!-- Add URL for background image to JS 'site' variable -->
-    <script>
-    site = $.extend(
-        true,               // deep extend
-        {   
-            "uri": {
-                "images": {
-                    "background" : "{{ assets.url('assets://vendor/azmind/images/login-background.jpg') | raw }}"
-                }
-            }
-        },
-        site
-    );
-    </script>
-    
-    <!--[if lt IE 10]>
-        <script src="{{ assets.url('assets://vendor/azmind/js/placeholder.js') | raw }}"></script>
-    <![endif]-->
 {% endblock %}
 
 {% block scripts_page %}
