--- a/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
+++ b/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
@@ -16,12 +16,10 @@
         <div class="container">  
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text">
-                    <h1>Bootstrap Login &amp; Register Forms</h1>
+                    <h1>Let's get started!</h1>
                     <div class="description">
                         <p>
-                            Free responsive template made with Bootstrap. 
-                            Download it on <a href="http://azmind.com" target="_blank">AZMIND</a>, 
-                            customize and use it as you like!
+                            Register for free, or sign in with an existing account.
                         </p>
                     </div>
                 </div>
