--- a/app/sprinkles/account/templates/pages/forgot-password.html.twig
+++ b/app/sprinkles/account/templates/pages/forgot-password.html.twig
@@ -18,7 +18,7 @@
     </div>
     
     <div class="row register-form">
-        <div class="col-sm-4 col-sm-offset-4">
+        <div class="col-sm-6 col-sm-offset-3">
             <form id="request-password-reset" role="form" action="{{site.uri.public}}/account/forgot-password" method="post" class="r-form">
                 <div class="form-group">
                     <label class="sr-only" for="reset-form-email">Email</label>
@@ -36,7 +36,7 @@
     {% include "components/validators.js.twig" %}
     </script>
     
-    <!-- Include page-specific JS -->
-    {{ assets.js('js/pages/sign-in-or-register') | raw }}
+    <!-- Include page-specific JS bundle -->
+    {{ assets.js('js/pages/forgot-password') | raw }}
     
 {% endblock %}
