account settings page, and start digging into models

--- a/app/sprinkles/account/templates/components/nav-account.html.twig
+++ b/app/sprinkles/account/templates/components/nav-account.html.twig
@@ -11,10 +11,10 @@
     </div>
     <!-- /.navbar-header -->
 
-    {% include 'components/dashboard/menus/topbar.twig' %}
+    {% include 'components/topbar.html.twig' %}
     <div class="sidebar-wrapper">
         <div class="navbar-default navbar-userfrosting sidebar" role="navigation">
-            {% include 'components/dashboard/menus/sidebar.twig' %}
+            {% include 'components/sidebar.html.twig' %}
         </div>
         <!-- /.navbar-static-side -->        
     </div>
