--- a/app/sprinkles/account/templates/components/topbar.html.twig
+++ b/app/sprinkles/account/templates/components/topbar.html.twig
@@ -191,7 +191,7 @@
     <!-- /.dropdown -->
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            <i class="{{user.icon}} fa-fw"></i> {{user.user_name}} <i class="fa fa-caret-down"></i>
+            <i class="{{current_user.icon}} fa-fw"></i> {{current_user.user_name}} <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-user">
             <li><a href="{{site.uri.public}}/account/settings"><i class="fa fa-gear fa-fw"></i> Settings</a>
