--- a/app/sprinkles/account/templates/pages/forgot-password.html.twig
+++ b/app/sprinkles/account/templates/pages/forgot-password.html.twig
@@ -1,14 +1,14 @@
 {% extends "layouts/azmind.html.twig" %}
 
 {# Overrides blocks in head of base template #}
-{% block page_title %}Reset Password{% endblock %}
+{% block page_title %}Forgotten Password{% endblock %}
 
-{% block page_description %}Reset your UserFrosting password.{% endblock %}
+{% block page_description %}Get a link to reset your UserFrosting password.{% endblock %}
     
 {% block body_matter %}
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2 text">
-            <h1>Reset Password</h1>
+            <h1>Forgotten Password</h1>
             <div class="description">
                 <p>
                     Please enter the email address you used to sign up.<br>A link with instructions to reset your password will be emailed to you.
@@ -22,7 +22,7 @@
             <form id="request-password-reset" role="form" action="{{site.uri.public}}/account/forgot-password" method="post" class="r-form">
                 <div class="form-group">
                     <label class="sr-only" for="reset-form-email">Email</label>
-                    <input type="text" name="email" placeholder="The email address you used to register" class="form-control" id="reset-form-email">
+                    <input type="text" name="email" placeholder="Please enter the email address you used to sign up" class="form-control" id="reset-form-email">
                 </div>
                 <button type="submit" class="btn">Email Password Reset Link</button>
             </form>
