--- a/app/sprinkles/core/templates/components/main-nav.html.twig
+++ b/app/sprinkles/core/templates/components/main-nav.html.twig
@@ -15,12 +15,12 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="{{site.uri.public}}/about">About</a>
+                    <a href="{{site.uri.public}}/about">{{translate("ABOUT")}}</a>
                 </li>
                 {# TODO: Show link to "Account" if they're already signed in #}
                 <li>
-                    <a href="{{site.uri.public}}/account/sign-in-or-register" class="nav-highlight">Sign Up</a>
-                </li>                
+                    <a href="{{site.uri.public}}/account/sign-in-or-register" class="nav-highlight">{{translate("ACCOUNT.SINGUP")}}</a>
+                </li>
                 <!--
                 <li>
                     <a href="{{site.uri.public}}/services">Services</a>
