--- a/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
+++ b/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
@@ -96,6 +96,11 @@
                     <label class="sr-only" for="l-form-password">Password</label>
                     <input type="password" name="password" placeholder="Password" class="form-control" id="l-form-password">
                 </div>
+                <div class="form-group">
+                    <label for="l-form-rememberme">
+                        <input type="checkbox" name="rememberme" id="l-form-rememberme"> Remember me on this computer (not recommended for public computers)
+                    </label>
+                </div>                
                 <button type="submit" class="btn">Sign in!</button>
             </form>
             <div class="registration-links">
