--- a/app/sprinkles/account/templates/components/nav-account.html.twig
+++ b/app/sprinkles/account/templates/components/nav-account.html.twig
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{site.uri.public}}">{{site.site_title}}</a>
+        <a class="navbar-brand" href="{{site.uri.public}}">{{site.title}}</a>
     </div>
     <!-- /.navbar-header -->
 
