account registration hooked up

--- a/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
+++ b/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
@@ -53,7 +53,14 @@
                 <div class="form-group">
                     <label class="sr-only" for="r-form-passwordc">Confirm password</label>
                     <input type="password" name="passwordc" placeholder="Re-enter your password" class="form-control" id="r-form-passwordc">
-                </div>                        
+                </div>
+                <div class="collapse">
+                    <label>Spiderbro: Don't change me bro, I'm tryin'a catch some flies!</label>
+                    <input name="spiderbro" id="spiderbro" value="http://"/>
+                </div>
+                <div class="text-left">
+                    By registering an account with {{site.title}}, you accept the <a href="#" data-toggle="modal" data-target="#tos">terms and conditions</a>.
+                </div>                
                 <button type="submit" class="btn">Sign me up!</button>
             </form>
         </div>
