--- a/app/sprinkles/account/templates/components/main-nav.html.twig
+++ b/app/sprinkles/account/templates/components/main-nav.html.twig
@@ -1,3 +1,5 @@
+{# This overrides the "home page" nav menu in core, adding a sign-up/sign-in or "my account" link. #}
+
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
@@ -17,6 +19,15 @@
                 <li>
                     <a href="{{site.uri.public}}/about">About</a>
                 </li>
+                {% if current_user.isGuest() %}
+                    <li>
+                        <a href="{{site.uri.public}}/account/sign-in-or-register" class="nav-highlight">Sign In</a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a href="{{site.uri.public}}/account/settings" class="nav-highlight">My Account</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
         <!-- /.navbar-collapse -->
