--- a/app/sprinkles/account/templates/layouts/azmind.html.twig
+++ b/app/sprinkles/account/templates/layouts/azmind.html.twig
@@ -55,6 +55,9 @@
                 "images": {
                     "background" : "{{ assets.url('assets://vendor/azmind/images/login-background.jpg') | raw }}"
                 }
+            },
+            "setting" : {
+                "can_register" : "{{site.setting.can_register}}"
             }
         },
         site
