--- a/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
+++ b/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
@@ -19,76 +19,83 @@
     
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1 show-forms">
-            <span class="show-register-form active">Register</span> 
-            <span class="show-forms-divider">/</span> 
-            <span class="show-login-form">Sign In</span>
+            {% if site.setting.can_register %}
+                <span class="show-login-form active">Sign In</span>
+                <span class="show-forms-divider">/</span>
+                <span class="show-register-form">Register</span>
+            {% else %}
+                <span class="show-login-form-static">Sign In</span>
+            {% endif %}
         </div>
     </div>
-    <div class="row register-form">
-        <div class="col-sm-4 col-sm-offset-1">
-            <div id="alerts-register">
-            
+    {% if site.setting.can_register %}
+        <div class="row register-form">
+            <div class="col-sm-4 col-sm-offset-1">
+                <div id="alerts-register">
+                
+                </div>
+                <form id="register" role="form" action="{{site.uri.public}}/account/register" method="post" class="r-form">
+                    <div class="form-group">
+                        <label class="sr-only" for="r-form-username">User name</label>
+                        <input type="text" name="user_name" placeholder="Choose a unique username" class="form-control" id="r-form-username">
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6 form-group">
+                            <label class="sr-only" for="r-form-first-name">First name</label>
+                            <input type="text" name="first_name" placeholder="First name" class="form-control" id="r-form-first-name">
+                        </div>
+                        <div class="col-sm-6 form-group">
+                            <label class="sr-only" for="r-form-last-name">Last name</label>
+                            <input type="text" name="last_name" placeholder="Last name" class="form-control" id="r-form-last-name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="r-form-email">Email</label>
+                        <input type="text" name="email" placeholder="Email address" class="form-control" id="r-form-email">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="r-form-password">Password</label>
+                        <input type="password" name="password" placeholder="Password (12-100 characters)" class="form-control" id="r-form-password">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="r-form-passwordc">Confirm password</label>
+                        <input type="password" name="passwordc" placeholder="Re-enter your password" class="form-control" id="r-form-passwordc">
+                    </div>
+                    <div class="collapse">
+                        <label>Spiderbro: Don't change me bro, I'm tryin'a catch some flies!</label>
+                        <input name="spiderbro" id="spiderbro" value="http://"/>
+                    </div>
+                    <div class="text-left">
+                        By registering an account with {{site.title}}, you accept the <a href="#" data-toggle="modal" data-target="#tos">terms and conditions</a>.
+                    </div>                
+                    <button type="submit" class="btn">Sign me up!</button>
+                </form>
             </div>
-            <form id="register" role="form" action="{{site.uri.public}}/account/register" method="post" class="r-form">
-                <div class="form-group">
-                    <label class="sr-only" for="r-form-username">User name</label>
-                    <input type="text" name="user_name" placeholder="A unique name to identify yourself." class="form-control" id="r-form-username">
+            <div class="col-sm-6 forms-right-icons">
+                <div class="row">
+                    <div class="col-sm-2 icon"><i class="fa fa-pencil"></i></div>
+                    <div class="col-sm-10">
+                        <h3>Beautiful Forms</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="sr-only" for="r-form-first-name">First name</label>
-                    <input type="text" name="first_name" placeholder="First name" class="form-control" id="r-form-first-name">
+                <div class="row">
+                    <div class="col-sm-2 icon"><i class="fa fa-commenting"></i></div>
+                    <div class="col-sm-10">
+                        <h3>Awesome Login</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="sr-only" for="r-form-last-name">Last name</label>
-                    <input type="text" name="last_name" placeholder="Last name" class="form-control" id="r-form-last-name">
+                <div class="row">
+                    <div class="col-sm-2 icon"><i class="fa fa-magic"></i></div>
+                    <div class="col-sm-10">
+                        <h3>Great Registration</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="sr-only" for="r-form-email">Email</label>
-                    <input type="text" name="email" placeholder="Email address" class="form-control" id="r-form-email">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="r-form-password">Password</label>
-                    <input type="password" name="password" placeholder="12-100 characters" class="form-control" id="r-form-password">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="r-form-passwordc">Confirm password</label>
-                    <input type="password" name="passwordc" placeholder="Re-enter your password" class="form-control" id="r-form-passwordc">
-                </div>
-                <div class="collapse">
-                    <label>Spiderbro: Don't change me bro, I'm tryin'a catch some flies!</label>
-                    <input name="spiderbro" id="spiderbro" value="http://"/>
-                </div>
-                <div class="text-left">
-                    By registering an account with {{site.title}}, you accept the <a href="#" data-toggle="modal" data-target="#tos">terms and conditions</a>.
-                </div>                
-                <button type="submit" class="btn">Sign me up!</button>
-            </form>
+            </div>
         </div>
-        <div class="col-sm-6 forms-right-icons">
-            <div class="row">
-                <div class="col-sm-2 icon"><i class="fa fa-pencil"></i></div>
-                <div class="col-sm-10">
-                    <h3>Beautiful Forms</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 icon"><i class="fa fa-commenting"></i></div>
-                <div class="col-sm-10">
-                    <h3>Awesome Login</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 icon"><i class="fa fa-magic"></i></div>
-                <div class="col-sm-10">
-                    <h3>Great Registration</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    
+    {% endif %}
     <div class="row login-form">
         <div class="col-sm-4 col-sm-offset-1">
             <div id="alerts-login">
